--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -5,6 +5,7 @@
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
     <LangVersion>preview</LangVersion>
+    <Nullable>enable</Nullable>
     <NoWarn>$(NoWarn);NU5125</NoWarn>
     <Copyright>$(CopyrightMicrosoft)</Copyright>
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
@@ -13,5 +14,9 @@
     <!-- Workaround: https://github.com/dotnet/sdk/issues/12739 -->
     <ImportFrameworkWinFXTargets>true</ImportFrameworkWinFXTargets>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Validation" Version="$(MicrosoftVisualStudioValidationVersion)" />
+  </ItemGroup>
 
 </Project>
