--- a/src/ProjectSystemTools/ProjectSystemTools.csproj
+++ b/src/ProjectSystemTools/ProjectSystemTools.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Utilities" Version="$(MicrosoftVisualStudioUtilitiesVersion)" />
     <PackageReference Include="Microsoft.VisualStudio.Validation" Version="$(MicrosoftVisualStudioValidationVersion)" />
     <PackageReference Include="System.Composition" Version="$(SystemCompositionVersion)" />
+    <PackageReference Include="System.Text.Json" Version="8.0.4"/>
     <PackageReference Include="Microsoft.IO.Redist" Version="6.0.1"/>
     <PackageReference Include="Microsoft.VisualStudio.Designer.Interfaces" Version="17.0.0-preview-1-31216-036" />
   </ItemGroup>
