--- a/eng/analyze-compliance.yml
+++ b/eng/analyze-compliance.yml
@@ -20,7 +20,7 @@ steps:
     softwareName: 'Dotnet-Project-System-Tools'
     softwareVersionNum: ${{ parameters.SoftwareVersion }}
     softwareBuildNum: $(Build.BuildId)
-    symbolsFolder: SRV*http://symweb
+    symbolsFolder: SRV*https://symweb.azurefd.net
     noCopySymbols: true
     noCopyBinaries: true
     noDecompress: true
