--- a/src/ProjectSystemTools/ProjectSystemTools.csproj
+++ b/src/ProjectSystemTools/ProjectSystemTools.csproj
@@ -36,6 +36,7 @@
     <PackageReference Include="System.Composition" Version="$(SystemCompositionVersion)" />
     <PackageReference Include="System.Text.Json" Version="$(SystemTextJsonVersion)"/>
     <PackageReference Include="Microsoft.IO.Redist" Version="$(MicrosoftIORedistVersion)"/>
+    <PackageReference Include="MessagePack" Version="$(MessagePackVersion)"/>
     <PackageReference Include="Microsoft.VisualStudio.Designer.Interfaces" Version="17.0.0-preview-1-31216-036" />
   </ItemGroup>
   <ItemGroup>
